# opengl-mandelbrot

./: CMakeLists.txt  README.md
src/: glfw.cpp  glfw.h  image.cpp  image.h  main.cpp  mandelbrot.cpp  mandelbrot.frag  mandelbrot.h  mandelbrot.vert  shader.cpp  shader.h  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
tools/: gen_palette.py
